--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,59 +6,63 @@
 trigger:
 - main
 
-pool:
-  vmImage: ubuntu-default
+jobs:
+- job: Linux
+  pool:
+    vmImage: 'ubuntu-latest'
+# pool:
+#   vmImage: ubuntu-default
 
-steps:
-- task: NodeTool@0
-  inputs:
-    versionSpec: '10.x'
-  displayName: 'Install Node.js'
+  steps:
+  - task: NodeTool@0
+    inputs:
+      versionSpec: '12.x'
+    displayName: 'Install Node.js'
 
-- script: |
-    npm install -g @angular/cli
-    npm install
-    ng build --prod
+  - script: |
+      npm install -g @angular/cli
+      npm install
+      ng build --prod
 
-# - script: |
-#     npm pack
-#   displayName: 'Package for npm release'
+  # - script: |
+  #     npm pack
+  #   displayName: 'Package for npm release'
 
-# - task: CopyFiles@2
-#   inputs:
-#     sourceFolder: '$(Build.SourcesDirectory)'
-#     contents: '*.tgz' 
-#     targetFolder: $(Build.ArtifactStagingDirectory)/npm
-#   displayName: 'Copy npm package'
+  # - task: CopyFiles@2
+  #   inputs:
+  #     sourceFolder: '$(Build.SourcesDirectory)'
+  #     contents: '*.tgz' 
+  #     targetFolder: $(Build.ArtifactStagingDirectory)/npm
+  #   displayName: 'Copy npm package'
 
-# - task: CopyFiles@2
-#   inputs:
-#     sourceFolder: '$(Build.SourcesDirectory)'
-#     contents: 'package.json' 
-#     targetFolder: $(Build.ArtifactStagingDirectory)/npm
-#   displayName: 'Copy package.json'
+  # - task: CopyFiles@2
+  #   inputs:
+  #     sourceFolder: '$(Build.SourcesDirectory)'
+  #     contents: 'package.json' 
+  #     targetFolder: $(Build.ArtifactStagingDirectory)/npm
+  #   displayName: 'Copy package.json'
 
-# - task: PublishBuildArtifacts@1
-#   inputs:
-#     pathtoPublish: '$(Build.ArtifactStagingDirectory)/npm'
-#     artifactName: npm
-#   displayName: 'Publish npm artifact'
-  
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false
+  # - task: PublishBuildArtifacts@1
+  #   inputs:
+  #     pathtoPublish: '$(Build.ArtifactStagingDirectory)/npm'
+  #     artifactName: npm
+  #   displayName: 'Publish npm artifact'
 
-- task: AzureWebApp@1
-  inputs:
-    azureSubscription: 'node-todo-connection'
-    appType: webAppLinux
-    appName: 'mktestapps'
-    package: $(System.DefaultWorkingDirectory)/*.zip  
-- task: ArchiveFiles@2
-  inputs:
-    rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-    includeRootFolder: false
-    archiveType: 'zip'
-    archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-    replaceExistingArchive: true
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+      includeRootFolder: false
+
+  - task: AzureWebApp@1
+    inputs:
+      azureSubscription: 'node-todo-connection'
+      appType: webAppLinux
+      appName: 'mktestapps'
+      package: $(System.DefaultWorkingDirectory)/*.zip  
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+      includeRootFolder: false
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+      replaceExistingArchive: true
