--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,10 @@ jobs:
   - script: |
       npm install -g @angular/cli@latest  
       npm install
+      npm audit fix
       ng build --prod
+    displayName: 'Build step'
+    workingDirectory: $(Agent.BuildDirectory)
 
   # - script: |
   #     npm pack
