--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,16 +18,17 @@ jobs:
     inputs:
       versionSpec: '12.x'
     displayName: 'Install Node.js'
-  - task: Bash@3
+  
+  - task: Npm@1
+    displayName: 'npm install'
     inputs:
-      targetType: 'inline'
-      script:  |
-        ls -lart
-        npm install -g @angular/cli@latest  
-        npm install
-        npm audit fix
-        ng build --prod
-      displayName: 'Build'
+      command: install
+  
+  - task: Npm@1
+    displayName: 'Build Angular'
+    inputs:
+      command: custom
+      customCommand: run build -- --prod
 #   - script: |
 #       ls -lart
 #       npm install -g @angular/cli@latest  
