--- a/package.json
+++ b/package.json
@@ -4,6 +4,11 @@
   "description": "Simple todo application.",
   "main": "server.js",
   "author": "Scotch",
+   "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build"
+  },
   "dependencies": {
     "body-parser": "^1.18.2",
     "mongoose": "4.10.8",
