--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,12 @@ jobs:
     displayName: 'npm install'
     inputs:
       command: install && npm install -g @angular/cli@latest
-  
+
+  - task: Npm@1
+    displayName: 'npm install'
+    inputs:
+      command: install -g @angular/cli@latest
+      
   - task: Npm@1
     displayName: 'Build Angular'
     inputs:
