--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,7 +32,14 @@ jobs:
     inputs:
       workingDirectory: $(System.DefaultWorkingDirectory)
       command: install
-  
+      
+  - task: Npm@1  
+    displayName: 'Install node sass'  
+    inputs:  
+      command: custom  
+      verbose: false  
+      customCommand: 'install node-sass@4.12.0'
+      
 #   - task: Npm@1
 #     displayName: 'npm audit'
 #     inputs:
