Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -89,25 +89,21 @@ jobs:
 
   - task: ArchiveFiles@2
     inputs:
-      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-      includeRootFolder: false
-  - task: ArchiveFiles@2
-    inputs:
       includeRootFolder: true 
       archiveType: 'zip' # Options: zip, 7z, tar, wim
       archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
       replaceExistingArchive: true 
 
-  - task: AzureWebApp@1
+  # - task: AzureWebApp@1
+  #   inputs:
+  #     azureSubscription: 'node-todo-connection'
+  #     appType: webAppLinux
+  #     appName: 'mktestapps'
+  #     package: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
+  
+  - task: AzureRmWebAppDeployment@4
     inputs:
       azureSubscription: 'node-todo-connection'
-      appType: webAppLinux
-      appName: 'mktestapps'
-      package: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
-  - task: ArchiveFiles@2
-    inputs:
-      rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-      includeRootFolder: false
-      archiveType: 'zip'
-      archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
-      replaceExistingArchive: true
+      appType: 'webAppLinux'
+      WebAppName: 'mktestapps'
+      packageForLinux: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip' 
